[package]
name = "rustblockchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustblockchain"
path = "src/lib.rs"

[[bin]]
name = "rustblockchain"
path = "src/main.rs"


[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"